# algorithms

./: README.md
2SUM/c/: CMakeLists.txt
2SUM/c/include/: hash_table.h
2SUM/c/src/: hash_table.c  main.c
dijkstra/c/: CMakeLists.txt  out.txt  simple.txt
dijkstra/c/include/: dsp.h  graph.h  heap.h
dijkstra/c/src/: dsp.c  graph.c  heap.c  main.c
greedy_jobs/c/: CMakeLists.txt
greedy_jobs/c/include/: job.h  qsort.h
greedy_jobs/c/src/: job.c  main.c  qsort.c
heap_median/c/: CMakeLists.txt
heap_median/c/include/: heap.h  median_maintainance.h
heap_median/c/src/: heap.c  main.c  median_maintainance.c
inversions/: inversions.clj
karatsuba/c/: CMakeLists.txt
karatsuba/c/include/: karatsuba.h
karatsuba/c/src/: karatsuba.c  main.c
karatsuba/c/test/: karatsuba.cpp
karatsuba/clj/: karatsuba.clj  tests.txt
prim_mst/c/: CMakeLists.txt
prim_mst/c/include/: graph.h  heap.h  mst.h
prim_mst/c/src/: graph.c  heap.c  main.c  mst.c
quick_sort/c/: CMakeLists.txt
quick_sort/c/include/: quick_sort.h
quick_sort/c/src/: main.c  quick_sort.c
quick_sort/c/test/: quick_sort.cpp
quick_sort/clj/: input.txt  quick_sort.clj
r_contract/c/: CMakeLists.txt  out.txt
r_contract/c/include/: graph.h  r_contract.h
r_contract/c/src/: graph.c  main.c  r_contract.c
scc/c/: CMakeLists.txt  test.txt
scc/c/include/: graph.h  scc.h
scc/c/src/: graph.c  main.c  scc.c
